tests/failed/02-unsupported-derive.stderr
error: unsupported derive
 --> tests/failed/02-unsupported-derive.rs:4:10
  |
4 | #[derive(Shit)]
  |          ^^^^
